<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/segundo_fundo"
    tools:context=".fragment.NumberFragment">

    <ImageButton
        android:id="@+id/fragment_number_image_one"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/um"
        android:contentDescription="@string/fragment_number_one_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/fragment_number_image_three"
        app:layout_constraintEnd_toStartOf="@+id/fragment_number_image_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fragment_number_image_five"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/cinco"
        android:contentDescription="@string/fragment_number_five_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_number_image_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_number_image_three" />

    <ImageButton
        android:id="@+id/fragment_number_image_three"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/tres"
        android:contentDescription="@string/fragment_number_three_description"
        app:layout_constraintBottom_toTopOf="@+id/fragment_number_image_five"
        app:layout_constraintEnd_toStartOf="@+id/fragment_number_image_four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_number_image_one" />

    <ImageButton
        android:id="@+id/fragment_number_image_two"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/dois"
        android:contentDescription="@string/fragment_number_two_description"
        app:layout_constraintBottom_toTopOf="@+id/fragment_number_image_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragment_number_image_one"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fragment_number_image_four"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/quatro"
        android:contentDescription="@string/fragment_number_four_description"
        app:layout_constraintBottom_toTopOf="@+id/fragment_number_image_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragment_number_image_three"
        app:layout_constraintTop_toBottomOf="@+id/fragment_number_image_two" />

    <ImageButton
        android:id="@+id/fragment_number_image_six"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/seis"
        android:contentDescription="@string/fragment_number_six_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragment_number_image_five"
        app:layout_constraintTop_toBottomOf="@+id/fragment_number_image_four" />

</androidx.constraintlayout.widget.ConstraintLayout>